Cambios para cambiar a la edad correcta

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,6 @@
 Esta es la historia de Ronny
 
-Ronny tiene 18 años y nació en República Dominicana.
+Ronny tiene 19 años y nació en República Dominicana.
+Viviendo en todo el mundo
 
 Hoy hablaremos de su historia
