--- a/history.txt
+++ b/history.txt
@@ -3,4 +3,4 @@ Esta es la historia de Ronny
 Ronny tiene 19 años y nació en República Dominicana.
 Viviendo en todo el mundo
 
-Hoy hablaremos de su historia
+Hoy hablaremos de su vida.
