--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,5 @@
 Esta es la historia de Ronny
 
-Ronny tiene 19 años y nació en República Dominicana.
-Viviendo en todo el mundo
+Ronny tiene 18 años y nació en República Dominicana.
 
-Hoy hablaremos de su vida y obra maestra
+Mañana hablaremos de su historia.
